--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=false
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=false
-bintray.user=
-bintray.apikey=
+bintray.user=shiqizhenyes
+bintray.apikey=d2d28048826932157ff2ad3d4bea4c349108214f
