--- a/NiceView/src/main/AndroidManifest.xml
+++ b/NiceView/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.nice.view">
 
-    <application>
-        <activity android:name=".MainActivity"></activity>
+    <application
+        android:label="@string/app_name">
     </application>
 
 </manifest>
