整合自定义控件，修复控件宽高计算错误
sqz

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PickerActivity"></activity>
+        <activity android:name=".NicePointerActivity"></activity>
+        <activity android:name=".PickerActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
