添加圆形涟漪控件
添加圆形涟漪控件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NicePointerActivity"></activity>
-        <activity android:name=".PickerActivity" />
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -21,6 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".NiceCircleRippleViewActivity" />
+
+        <activity android:name=".NicePointerActivity"/>
+        <activity android:name=".PickerActivity" />
     </application>
 
 </manifest>
