--- a/NiceView/build.gradle
+++ b/NiceView/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
-        versionName "1.1.5"
+        versionName "1.1.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -62,7 +62,7 @@ artifacts {
 }
 
 group = "me.nice.view"
-version = "1.1.5"
+version = "1.1.7"
 
 install {
     repositories.mavenInstaller {
@@ -120,9 +120,9 @@ bintray {
         issueTrackerUrl = 'https://github.com/shiqizhenyes/NiceView/issues'
         publicDownloadNumbers = true
         version {
-            name = '1.1.5'
+            name = '1.1.7'
             desc = 'nice view open source library'
-            vcsTag = '1.1.5'
+            vcsTag = '1.1.7'
             attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
         }
     }
@@ -130,4 +130,8 @@ bintray {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+}
+
+tasks.withType(Javadoc) {//防止编码问题
+    options.encoding("UTF-8")
 }
