--- a/NiceView/build.gradle
+++ b/NiceView/build.gradle
@@ -9,14 +9,13 @@ def gitUrl = 'https://github.com/shiqizhenyes/NiceView.git'
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
-
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 1
         versionName "1.1.7"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.test.runner.AndroidJUnitRunner"
 
     }
 
