--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NiceRadioButtonActivity"/>
-        <activity android:name=".NicePickerActivity" />
-        <activity android:name=".NiceBubbleLayoutActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".NiceAvatarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".NiceRadioButtonActivity" />
+        <activity android:name=".NicePickerActivity" />
+        <activity android:name=".NiceBubbleLayoutActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="fullSensor">
         </activity>
         <activity android:name=".NiceCircleRippleViewActivity" />
         <activity android:name=".NicePointerActivity" />
