--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.nice.customview">
+    package="me.nice.samples">
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NiceAvatarActivity">
-
-        </activity>
+        <activity android:name=".NiceCameraActivity"/>
+        <activity android:name=".NiceAvatarActivity"/>
         <activity android:name=".NiceRadioButtonActivity" />
         <activity android:name=".NicePickerActivity" />
         <activity android:name=".NiceBubbleLayoutActivity" />
